nova_tests/negative_capability/module_forbid_violation_setup/_module.nv
// Plan 42.10: module-level #forbid Net.
// Propagирует Net forbid ко всем peers folder-module.
// Plan 42.16: attrs ПЕРЕД module.

#forbid Net
module module_forbid_violation_setup._module
